--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./style.css" />
 
     <!-- ChatBot -->
-    <link rel="stylesheet" href="/css/jquery.convform.css" />
+    <!-- <link rel="stylesheet" href="/css/jquery.convform.css" /> -->
 
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
@@ -23,52 +23,8 @@
 
     <!-- Unicons -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css" />
+      
 
-    <!-- SCRIPT -->
-    <script>
-      // let $j = jQuery.noConflict(true);
-
-      // $j(document).ready(function () {
-      //   let offset = 200; // координата сдвига по оси Y
-      //   let duration = 300; // время выполнения
-      //   $j("#totop").fadeOut(0);
-      //   $j('a[href^="#"]:not([href="#demo"]').click(function () {
-      //     // если в href начинается с #, то обрабатываем клик
-      //     let scrollEl = $j(this).attr("href"); // возьмем содержимое атрибута href
-      //     if ($j(scrollEl).length != 0) {
-      //       // проверим существование элемента чтобы избежать ошибки
-      //       $j("html, body").animate(
-      //         { scrollTop: $j(scrollEl).offset().top },
-      //         500
-      //       ); // анимируем скроолинг к элементу scrollEl
-      //     }
-      //     return false; // выключаем стандартное действие
-      //   });
-
-      //   $j(window).scroll(function () {
-      //     if ($j(this).scrollTop() > offset) {
-      //       $j("#totop").css("opacity", "0.8"); // возвращаем прозрачность
-      //       $j("#totop").fadeIn(duration); // элемент плавно исчезает
-      //     } else {
-      //       $j("#totop").fadeOut(duration); // элемент плавно появляется
-      //     }
-
-      //     $j(".slideanim").each(function () {
-      //       // для каждого блока с классом slideanim
-      //       var pos = $j(this).offset().top; // считываем его координату по оси Y в окне браузера
-
-      //       var winTop = $j(window).scrollTop(); // количество пикселей, на которые прокручено окно
-
-      //       if (pos < winTop + 500) {
-      //         //если до верха страницы остается 500px,
-      //         $j(this).addClass("slide"); //добавляем к блоку класс slide с анимацией
-      //       }
-      //     });
-      //   });
-      // });
-    </script>
-
-    <!-- <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
