script link change

--- a/index.html
+++ b/index.html
@@ -421,18 +421,18 @@
     <!-- Loader -->
     <script src="js/loader.js"></script>
     <!-- Chat Bot -->
-    <script src="/js/chat-bot.js"></script>
+    <script src="js/chat-bot.js"></script>
     <!-- Form -->
-    <script src="/js/form.js"></script>
+    <script src="js/form.js"></script>
     <!-- Text anim -->
-    <script src="/js/text-anim.js"></script>
+    <script src="js/text-anim.js"></script>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <!-- Main js file -->
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
     <!-- Responsive -->
-    <script src="/js/navbar.js"></script>
+    <script src="js/navbar.js"></script>
     <!-- Arrow -->
-    <script src="/js/arrow.js"></script>
+    <script src="js/arrow.js"></script>
   </body>
 </html>
