--- a/src/menu.html
+++ b/src/menu.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
@@ -22,10 +22,7 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css" />
 
     <!-- SCRIPT -->
-    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
@@ -243,7 +240,6 @@
     <script src="/js/chat-bot.js"></script>
     <!-- Text anim -->
     <script src="/js/text-anim.js"></script>
-    <!-- <script src="./script.js"></script> -->
     <!-- Responsive -->
     <script src="/js/navbar.js"></script>
     <!-- Loader -->
