--- a/src/menu.html
+++ b/src/menu.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/style.css" />
 
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
@@ -204,7 +204,7 @@
       <div class="footer-box">
         <h2>Links</h2>
         <a href="https://www.instagram.com/" target="_blank">Instagram</a>
-        <a href="https://www.facebook.com/" target="_blank"">Facebook</a>
+        <a href="https://www.facebook.com/" target="_blank">Facebook</a>
         <a href="https://www.twitter.com/" target="_blank">Twitter</a>
         <a href="https://www.youtube.com/" target="_blank">YouTube</a>
       </div>
