--- a/src/menu.html
+++ b/src/menu.html
@@ -38,11 +38,11 @@
       <div class="bx bx-menu" id="menu-icon"></div>
 
       <ul class="nvbr">
-        <li><a href="../index.html" class="home-active">Home</a></li>
-        <li><a href="./menu.html">Menu</a></li>
-        <li><a href="../index.html#about">About</a></li>
-        <li><a href="../index.html#chefs">Chefs</a></li>
-        <li><a href="../index.html#customers">Customers</a></li>
+        <li><a href="/index.html" class="home-active">Home</a></li>
+        <li><a href="#big-menu">Menu</a></li>
+        <li><a href="/index.html#about">About</a></li>
+        <li><a href="/index.html#chefs">Chefs</a></li>
+        <li><a href="/index.html#customers">Customers</a></li>
 
         <button class="btn-login" id="form-open">Login</button>
       </ul>
