--- a/src/menu.html
+++ b/src/menu.html
@@ -196,10 +196,10 @@
       </div>
       <div class="footer-box">
         <h2>Categories</h2>
-        <a href="/index.html#about">About restaurant</a>
-        <a href="/index.html#customers">Feedbacks</a>
+        <a href="./index.html#about">About restaurant</a>
+        <a href="./index.html#customers">Feedbacks</a>
         <a href="#menu">Menu</a>
-        <a href="/index.html#chefs">Chefs</a>
+        <a href="./index.html#chefs">Chefs</a>
       </div>
       <div class="footer-box">
         <h2>Links</h2>
