--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 
     <!-- Unicons -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css" />
-      
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -57,7 +56,7 @@
 
       <ul class="nvbr">
         <li><a href="#home" class="home-active">Home</a></li>
-        <li><a href="./src/menu.html">Menu</a></li>
+        <li><a href="src/menu.html">Menu</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#chefs">Chefs</a></li>
         <li><a href="#customers">Customers</a></li>
@@ -395,7 +394,7 @@
       <div class="footer-box">
         <h2>Links</h2>
         <a href="https://www.instagram.com/" target="_blank">Instagram</a>
-        <a href="https://www.facebook.com/" target="_blank"">Facebook</a>
+        <a href="https://www.facebook.com/" target="_blank">Facebook</a>
         <a href="https://www.twitter.com/" target="_blank">Twitter</a>
         <a href="https://www.youtube.com/" target="_blank">YouTube</a>
       </div>
