--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
         <h2>Categories</h2>
         <a href="#about">About restaurant</a>
         <a href="#customers">Feedbacks</a>
-        <a href="/src/menu.html">Menu</a>
+        <a href="src/menu.html">Menu</a>
         <a href="#chefs">Chefs</a>
       </div>
       <div class="footer-box">
