--- a/src/menu.html
+++ b/src/menu.html
@@ -228,25 +228,25 @@
     </div>
 
     <!-- menu -->
-    <script src="/js/renderProducts.js"></script>
-    <script src="/js/calcCartPrice.js"></script>
-    <script src="/js/toggleCartStatus.js"></script>
-    <script src="/js/counter-02.js"></script>
-    <script src="/js/cart-02.js"></script>
+    <script src="./js/renderProducts.js"></script>
+    <script src="./js/calcCartPrice.js"></script>
+    <script src="./js/toggleCartStatus.js"></script>
+    <script src="./js/counter-02.js"></script>
+    <script src="./js/cart-02.js"></script>
 
     <!-- form -->
-    <script src="/js/form.js"></script>
+    <script src="./js/form.js"></script>
     <!-- Chat Bot -->
-    <script src="/js/chat-bot.js"></script>
+    <script src="./js/chat-bot.js"></script>
     <!-- Text anim -->
-    <script src="/js/text-anim.js"></script>
+    <script src="./js/text-anim.js"></script>
     <!-- Responsive -->
-    <script src="/js/navbar.js"></script>
+    <script src="./js/navbar.js"></script>
     <!-- Loader -->
-    <script src="/js/loader.js"></script>
+    <script src="./js/loader.js"></script>
     <!-- Arrow -->
-    <script src="/js/arrow.js"></script>
+    <script src="./js/arrow.js"></script>
     <!-- Text anim -->
-    <script src="/js/text-anim.js"></script>
+    <script src="./js/text-anim.js"></script>
   </body>
 </html>
