--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="//style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
@@ -33,16 +33,16 @@
 
     <!-- Navbar -->
     <header>
-      <a href="/index.html" class="logo"><i class="bx bxs-pizza"></i>Delicacy</a>
+      <a href="index.html" class="logo"><i class="bx bxs-pizza"></i>Delicacy</a>
       <!-- menu icon -->
       <div class="bx bx-menu" id="menu-icon"></div>
 
       <ul class="nvbr">
-        <li><a href="/index.html" class="home-active">Home</a></li>
+        <li><a href="index.html" class="home-active">Home</a></li>
         <li><a href="#big-menu">Menu</a></li>
-        <li><a href="/index.html#about">About</a></li>
-        <li><a href="/index.html#chefs">Chefs</a></li>
-        <li><a href="/index.html#customers">Customers</a></li>
+        <li><a href="index.html#about">About</a></li>
+        <li><a href="index.html#chefs">Chefs</a></li>
+        <li><a href="index.html#customers">Customers</a></li>
 
         <button class="btn-login" id="form-open">Login</button>
       </ul>
@@ -196,10 +196,10 @@
       </div>
       <div class="footer-box">
         <h2>Categories</h2>
-        <a href="/index.html#about">About restaurant</a>
-        <a href="/index.html#customers">Feedbacks</a>
+        <a href="index.html#about">About restaurant</a>
+        <a href="index.html#customers">Feedbacks</a>
         <a href="#menu">Menu</a>
-        <a href="/index.html#chefs">Chefs</a>
+        <a href="index.html#chefs">Chefs</a>
       </div>
       <div class="footer-box">
         <h2>Links</h2>
@@ -228,25 +228,25 @@
     </div>
 
     <!-- menu -->
-    <script src="./js/renderProducts.js"></script>
-    <script src="./js/calcCartPrice.js"></script>
-    <script src="./js/toggleCartStatus.js"></script>
-    <script src="./js/counter-02.js"></script>
-    <script src="./js/cart-02.js"></script>
+    <script src="js/renderProducts.js"></script>
+    <script src="js/calcCartPrice.js"></script>
+    <script src="js/toggleCartStatus.js"></script>
+    <script src="js/counter-02.js"></script>
+    <script src="js/cart-02.js"></script>
 
     <!-- form -->
-    <script src="./js/form.js"></script>
+    <script src="js/form.js"></script>
     <!-- Chat Bot -->
-    <script src="./js/chat-bot.js"></script>
+    <script src="js/chat-bot.js"></script>
     <!-- Text anim -->
-    <script src="./js/text-anim.js"></script>
+    <script src="js/text-anim.js"></script>
     <!-- Responsive -->
-    <script src="./js/navbar.js"></script>
+    <script src="js/navbar.js"></script>
     <!-- Loader -->
-    <script src="./js/loader.js"></script>
+    <script src="js/loader.js"></script>
     <!-- Arrow -->
-    <script src="./js/arrow.js"></script>
+    <script src="js/arrow.js"></script>
     <!-- Text anim -->
-    <script src="./js/text-anim.js"></script>
+    <script src="js/text-anim.js"></script>
   </body>
 </html>
