--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <ul class="nvbr">
         <li><a href="#home" class="home-active">Home</a></li>
-        <li><a href="src/menu.html">Menu</a></li>
+        <li><a href="menu.html">Menu</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#chefs">Chefs</a></li>
         <li><a href="#customers">Customers</a></li>
@@ -141,7 +141,7 @@
               Pepperoni<br />
               <br />Pizza from the chef
             </h1>
-            <a href="/src/menu.html" class="buttn">Shop Now<i class="bx bx-chevron-right"></i></a>
+            <a href="menu.html" class="buttn">Shop Now<i class="bx bx-chevron-right"></i></a>
           </div>
           <img src="./images/pizza1-swiper.png" alt="" />
         </div>
@@ -153,7 +153,7 @@
               Pikanta<br />
               <br />Chef's Favorite Pizza
             </h1>
-            <a href="/src/menu.html" class="buttn">Shop Now<i class="bx bx-chevron-right"></i></a>
+            <a href="menu.html" class="buttn">Shop Now<i class="bx bx-chevron-right"></i></a>
           </div>
           <img src="./images/pizza2-swiper.png" alt="" />
         </div>
@@ -165,7 +165,7 @@
               Сarmen<br />
               <br />The most popular pizza
             </h1>
-            <a href="/src/menu.html" class="buttn">Shop Now<i class="bx bx-chevron-right"></i></a>
+            <a href="menu.html" class="buttn">Shop Now<i class="bx bx-chevron-right"></i></a>
           </div>
           <img src="./images/pizza3-swiper.png" alt="" />
         </div>
@@ -179,7 +179,7 @@
     <section class="mini_menu" id="menu">
       <div class="heading">
         <h1 class="element-animation">See all menu<br /><span class="element-animation">Mini menu</span></h1>
-        <a href="/src/menu.html" class="buttn">See all<i class="bx bx-chevron-right"></i></a>
+        <a href="menu.html" class="buttn">See all<i class="bx bx-chevron-right"></i></a>
       </div>
       <!-- Container menu -->
       <div class="menu-container">
@@ -188,35 +188,35 @@
           <img src="./images/pizza1.jpg" alt="" />
           <h2>Margarita</h2>
           <span>630gr</span>
-          <a href="/src/menu.html"><i class="bx bx-chevron-right"></i></a>
+          <a href="menu.html"><i class="bx bx-chevron-right"></i></a>
         </div>
         <!-- Box 2 -->
         <div class="box box2">
           <img src="./images/pizza2.jpg" alt="" />
           <h2>Pepperoni</h2>
           <span>510gr</span>
-          <a href="/src/menu.html"><i class="bx bx-chevron-right"></i></a>
+          <a href="menu.html"><i class="bx bx-chevron-right"></i></a>
         </div>
         <!-- Box 3 -->
         <div class="box box3">
           <img src="./images/pizza3.jpg" alt="" />
           <h2>Autumn</h2>
           <span>599gr</span>
-          <a href="/src/menu.html"><i class="bx bx-chevron-right"></i></a>
+          <a href="menu.html"><i class="bx bx-chevron-right"></i></a>
         </div>
         <!-- Box 4 -->
         <div class="box box4">
           <img src="./images/pizza4.jpg" alt="" />
           <h2>Spicy</h2>
           <span>550gr</span>
-          <a href="/src/menu.html"><i class="bx bx-chevron-right"></i></a>
+          <a href="menu.html"><i class="bx bx-chevron-right"></i></a>
         </div>
         <!-- Box 5 -->
         <div class="box box5">
           <img src="./images/pizza5.jpg" alt="" />
           <h2>Philadelphia</h2>
           <span>500gr</span>
-          <a href="/src/menu.html"><i class="bx bx-chevron-right"></i></a>
+          <a href="menu.html"><i class="bx bx-chevron-right"></i></a>
         </div>
       </div>
     </section>
@@ -388,7 +388,7 @@
         <h2>Categories</h2>
         <a href="#about">About restaurant</a>
         <a href="#customers">Feedbacks</a>
-        <a href="src/menu.html">Menu</a>
+        <a href="menu.html">Menu</a>
         <a href="#chefs">Chefs</a>
       </div>
       <div class="footer-box">
